--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         <hi>Hello World</hi>
-        <p>ぬべすこ</p>
+        <p><iframe src="https://discordapp.com/widget?id=429987160855150592&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe></p>
         </body>
         </html>
